changed index.html, fixed sizing for head on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -7,6 +7,6 @@ html, body {
 
 @media screen and (max-width: 550px) {
   html {
-    padding-top: 90px;
+    padding-top: 200px;
   }
 }
