--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -7,10 +7,18 @@
 
 .landing-page > div {
     background-color: rgba(241,241,241, 0.6);
-    width: 75%;
+    width: 60%;
     margin: 10px;
     padding: 10px 20px;
     text-align: center;
     border-radius: 60px;
 }
+
+@media screen and (max-width: 550px) {
+    .landing-page > div {
+        width: 75%;        
+    }
+}
+
+
 
